--- a/src/bindevelop/view/css/dark-theme.css
+++ b/src/bindevelop/view/css/dark-theme.css
@@ -25,19 +25,16 @@ and open the template in the editor.
     -fx-fill: -fx-primarytext;
 }
 
-.button{
-    -fx-text-fill: -fx-primarytext;
-    -fx-background-color: -fx-primary;
-    -fx-border-color: -fx-secondary;
-    -fx-border-radius: 20px;
-    -fx-background-radius: 20px;
-    -fx-font-size: 12pt;
-}
 
-.button:hover, .button:focused{
-    -fx-border-color: -fx-secondary;
-    -fx-background-color: -fx-secondary;
-    -fx-text-fill: -fx-primary;
+
+
+
+
+.buttonMenu {
+    -fx-background-image: url('../..//imgs/menu_50px.png');
+    -fx-background-size: 30px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: 90%; 
 }
 
 .text-field
