--- a/src/bindevelop/view/main/MainView.fxml
+++ b/src/bindevelop/view/main/MainView.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bindevelop.view.main.MainViewController">
    <stylesheets>
-        <URL value="@/bindevelop/view/css/dark-theme.css" />
+        <URL value="@/bindevelop/view/css/dark-theme.css" />       
     </stylesheets>
    <children>
       <AnchorPane layoutX="110.0" layoutY="62.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -42,7 +42,7 @@
                <children>
                   <VBox layoutX="-17.0" layoutY="47.0" maxWidth="50.0" minWidth="50.0" prefHeight="200.0" prefWidth="50.0" styleClass="panel-dark" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Button mnemonicParsing="false" style="-fx-background-image: \@;" text="Button">
+                        <Button mnemonicParsing="false" styleClass="buttonMenu">
                            <VBox.margin>
                               <Insets top="50.0" />
                            </VBox.margin>
