--- a/src/bindevelop/view/css/dark-theme.css
+++ b/src/bindevelop/view/css/dark-theme.css
@@ -25,17 +25,58 @@ and open the template in the editor.
     -fx-fill: -fx-primarytext;
 }
 
-
-
-
-
+.button:hover{
+     -fx-opacity: 1;
+}
 
 .buttonMenu {
-    -fx-background-image: url('../..//imgs/menu_50px.png');
-    -fx-background-size: 30px;
+   
+    -fx-border-style: none;     
+    -fx-background-size: 85%;
+    -fx-background-position: center;
     -fx-background-repeat: no-repeat;
-    -fx-background-position: 90%; 
+    -fx-background-color: transparent;
+    -fx-background-image: url('../imgs/menu_32px.png');
+    -fx-opacity: 0.5;      
 }
+
+.buttonOpcao{
+    -fx-background-size: 85%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-background-color: transparent;
+    -fx-background-image: url('../imgs/settings_50px.png');
+     -fx-opacity: 0.5;   
+}
+
+.buttonUI{
+    -fx-background-size: 85%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-background-color: transparent;
+    -fx-background-image: url('../imgs/paper_plane_32px.png');
+     -fx-opacity: 0.5;   
+}
+
+.buttonProject{
+    -fx-background-size: 85%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-background-color: transparent;
+    -fx-background-image: url('../imgs/tasks_32px.png');
+     -fx-opacity: 0.5;   
+}
+
+.buttonResouce{
+    -fx-background-size: 85%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-background-color: transparent;
+    -fx-background-image: url('../imgs/bulleted_list_32px.png');
+     -fx-opacity: 0.5;   
+}
+
+
 
 .text-field
 {
@@ -44,9 +85,6 @@ and open the template in the editor.
     -jfx-focus-color: -fx-secondary;
     -fx-text-fill: derive(-fx-secondary, 20%);
 }
-
-/*Login Screen Specific*/
-
 
 .wrong-credentials
 {
@@ -364,5 +402,22 @@ and open the template in the editor.
 
 .colored-context-menu .menu-item:focused .label {
     -fx-text-fill: black;
+}
+
+.tree-view, .tree-cell {
+    -fx-background-color: derive(-fx-primary, -30%);
+    -fx-text-fill: white ;
+}
+.tree-cell:expanded, .tree-cell:sub-tree-item {
+    -fx-background-color: #404040 ;
+}
+.tree-cell:selected {
+    -fx-font-weight: bold ;
+}
+.tree-cell {
+    -fx-padding: 0.75em 0em 0.75em 0em ;
+}
+.tree-cell:sub-tree-item {
+    -fx-padding: 0.25em ;
 }
 
